--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Sublime Workspace
+*.sublime-project
+*.sublime-workspace
+
+# Python files for testing
+test*.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
