--- a/Application/defaultConfig.json
+++ b/Application/defaultConfig.json
@@ -1,5 +1,5 @@
 {
-    "destinationDir": "C:\\Users\\forss\\Documents\\Python\\Logger\\Application",
+    "destinationDir": "C:\\Users\\forss\\Documents\\Python\\KeyLogger\\Application",
     "winX": 800,
     "winY": 600,
     "offsetX": 40,
